fixed alignment issue with sort menu

--- a/src/components/SortMenu/SortMenu.module.css
+++ b/src/components/SortMenu/SortMenu.module.css
@@ -8,7 +8,6 @@
 
 .sort-toggle {
     width: 100%;
-    flex-direction: row;
     align-items: center;
     justify-content: space-between;
 }
